добавлены иконки меню

--- a/main.html
+++ b/main.html
@@ -33,20 +33,21 @@
 <body class="d-flex">
 
 <div class="sidebar d-flex flex-column p-3 bg-dark text-white">
-    <h4 class="mb-4">Меню</h4>
+    <h4 class="mb-4"><img src="data/images/bootstrap.svg" alt="Logo" width="24" height="24" fill="white" xmlns="http://www.w3.org/2000/svg"> Меню</h4>
     <div class="line"></div>
     <ul class="nav flex-column">
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link active">Главная</a>
+
+            <a href="#" class="SuperButton nav-link active"><img src="data/images/house-door.svg" alt="Logo" width="20" height="20" fill="white" xmlns="http://www.w3.org/2000/svg"> Главная</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link">Категории</a>
+            <a href="#" class="SuperButton nav-link"><img src="data/images/Category.svg" alt="Logo" width="20" height="20" fill="white" xmlns="http://www.w3.org/2000/svg"> Категории</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link">Заказы</a>
+            <a href="#" class="SuperButton nav-link"><img src="data/images/calendar3.svg" alt="Logo" width="20" height="20" fill="white" xmlns="http://www.w3.org/2000/svg"> Заказы</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link">Контакты</a>
+            <a href="#" class="SuperButton nav-link"><img src="data/images/person-circle.svg" alt="Logo" width="20" height="20" fill="white" xmlns="http://www.w3.org/2000/svg"> Контакты</a>
         </li>
     </ul>
     <div class="profile-section mt-auto">
