--- a/main.html
+++ b/main.html
@@ -4,31 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интернет-магазин</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .sidebar {
-            height: 100vh;
-            background-color: #343a40;
-        }
-        .sidebar a {
-            color: #ffffff;
-            text-decoration: none;
-        }
-        .sidebar a:hover {
-            color: #ffffff;
-            text-decoration: none;
-            background-color: blue;
-        }
-        .profile-section {
-            margin-top: auto;
-        }
-        .line {
-            border-bottom: 1px solid grey;
-        }
-        .SuperButton {
-             border-radius:5px;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="data/style.css" rel="stylesheet" />
 </head>
 <body class="d-flex">
 
