--- a/catalog.html
+++ b/catalog.html
@@ -63,9 +63,9 @@
                         additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
-                    <div class="d-flex gap-2">
-                        <button class="btn btn-sm btn-outline-secondary">View</button>
-                        <button class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <div class="btn-group" role="group" aria-label="Basic outlined example">
+                        <button type="button" class="btn btn-outline-secondary">View</button>
+                        <button type="button" class="btn btn-outline-secondary">Edit</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                 </div>
@@ -80,9 +80,9 @@
                         additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
-                    <div class="d-flex gap-2">
-                        <button class="btn btn-sm btn-outline-secondary">View</button>
-                        <button class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <div class="btn-group" role="group" aria-label="Basic outlined example">
+                        <button type="button" class="btn btn-outline-secondary">View</button>
+                        <button type="button" class="btn btn-outline-secondary">Edit</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                 </div>
@@ -97,9 +97,9 @@
                         additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
-                    <div class="d-flex gap-2">
-                        <button class="btn btn-sm btn-outline-secondary">View</button>
-                        <button class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <div class="btn-group" role="group" aria-label="Basic outlined example">
+                        <button type="button" class="btn btn-outline-secondary">View</button>
+                        <button type="button" class="btn btn-outline-secondary">Edit</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                 </div>
@@ -114,9 +114,9 @@
                         additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer d-flex justify-content-between align-items-center">
-                    <div class="d-flex gap-2">
-                        <button class="btn btn-sm btn-outline-secondary">View</button>
-                        <button class="btn btn-sm btn-outline-secondary">Edit</button>
+                    <div class="btn-group" role="group" aria-label="Basic outlined example">
+                        <button type="button" class="btn btn-outline-secondary">View</button>
+                        <button type="button" class="btn btn-outline-secondary">Edit</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                 </div>
