--- a/category_1.html
+++ b/category_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Интернет-магазин | Главная</title>
+    <title>Интернет-магазин | Категория 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="data/style.css" rel="stylesheet"/>
 </head>
@@ -66,7 +66,7 @@
         </div>
         <div class="col">
             <div class="card text-center">
-                <h5 class="card-header">Товар 1</h5>
+                <h5 class="card-header">Товар 2</h5>
                 <div class="card-body">
                     <p class="card-text fs-3 fw-bold">$ 100</p>
                     <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
@@ -76,7 +76,7 @@
         </div>
         <div class="col">
             <div class="card text-center">
-                <h5 class="card-header">Товар 1</h5>
+                <h5 class="card-header">Товар 3</h5>
                 <div class="card-body">
                     <p class="card-text fs-3 fw-bold">$ 100</p>
                     <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
@@ -86,7 +86,7 @@
         </div>
         <div class="col">
             <div class="card text-center">
-                <h5 class="card-header">Товар 1</h5>
+                <h5 class="card-header">Товар 4</h5>
                 <div class="card-body">
                     <p class="card-text fs-3 fw-bold">$ 100</p>
                     <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
@@ -96,7 +96,7 @@
         </div>
         <div class="col">
             <div class="card text-center">
-                <h5 class="card-header">Товар 1</h5>
+                <h5 class="card-header">Товар 5</h5>
                 <div class="card-body">
                     <p class="card-text fs-3 fw-bold">$ 100</p>
                     <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
@@ -106,7 +106,7 @@
         </div>
         <div class="col">
             <div class="card text-center">
-                <h5 class="card-header">Товар 1</h5>
+                <h5 class="card-header">Товар 6</h5>
                 <div class="card-body">
                     <p class="card-text fs-3 fw-bold">$ 100</p>
                     <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
