--- a/contacts.html
+++ b/contacts.html
@@ -65,7 +65,7 @@
                         <label for="email" class="form-label">Почта</label>
                         <div class="input-group mb-3">
                             <span class="input-group-text" id="basic-addon1">@</span>
-                            <input type="text" class="form-control" aria-label="Имя пользователя"
+                            <input type="email" class="form-control" id="email" aria-label="Имя пользователя"
                                    aria-describedby="basic-addon1">
                         </div>
                     </div>
