--- a/html/catalog.html
+++ b/html/catalog.html
@@ -5,33 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интернет-магазин | Каталог</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="data/style.css" rel="stylesheet"/>
+    <link href="../data/style.css" rel="stylesheet"/>
 </head>
 <body class="d-flex">
 
 <div class="sidebar d-flex flex-column p-3 bg-dark text-white">
-    <h4 class="mb-4"><img src="data/images/bootstrap.svg" alt="Logo" width="24" height="24" fill="white"
+    <h4 class="mb-4"><img src="../data/images/bootstrap.svg" alt="Logo" width="24" height="24" fill="white"
                           xmlns="http://www.w3.org/2000/svg"> Меню</h4>
     <div class="line"></div>
     <ul class="nav flex-column">
         <li class="nav-item">
 
-            <a href="#" class="SuperButton nav-link active"><img src="data/images/house-door.svg" alt="Logo" width="20"
+            <a href="#" class="SuperButton nav-link active"><img src="../data/images/house-door.svg" alt="Logo" width="20"
                                                                  height="20" fill="white"
                                                                  xmlns="http://www.w3.org/2000/svg"> Главная</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link"><img src="data/images/Category.svg" alt="Logo" width="20"
+            <a href="#" class="SuperButton nav-link"><img src="../data/images/Category.svg" alt="Logo" width="20"
                                                           height="20" fill="white" xmlns="http://www.w3.org/2000/svg">
                 Категории</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link"><img src="data/images/calendar3.svg" alt="Logo" width="20"
+            <a href="#" class="SuperButton nav-link"><img src="../data/images/calendar3.svg" alt="Logo" width="20"
                                                           height="20" fill="white" xmlns="http://www.w3.org/2000/svg">
                 Заказы</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link"><img src="data/images/person-circle.svg" alt="Logo" width="20"
+            <a href="#" class="SuperButton nav-link"><img src="../data/images/person-circle.svg" alt="Logo" width="20"
                                                           height="20" fill="white" xmlns="http://www.w3.org/2000/svg">
                 Контакты</a>
         </li>
