--- a/html/category_1.html
+++ b/html/category_1.html
@@ -10,8 +10,7 @@
 <body class="d-flex">
 
 <div class="sidebar d-flex flex-column p-3 bg-dark text-white">
-    <h4 class="mb-4"><img src="../data/images/bootstrap.svg" alt="Logo" width="24" height="24" fill="white"
-                          xmlns="http://www.w3.org/2000/svg"> Меню</h4>
+    <h4 class="mb-4"><img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top"> Меню</h4>
     <div class="line"></div>
     <ul class="nav flex-column">
         <li class="nav-item">
