--- a/html/catalog.html
+++ b/html/catalog.html
@@ -15,24 +15,16 @@
     <ul class="nav flex-column">
         <li class="nav-item">
 
-            <a href="#" class="SuperButton nav-link active"><img src="../data/images/house-door.svg" alt="Logo" width="20"
-                                                                 height="20" fill="white"
-                                                                 xmlns="http://www.w3.org/2000/svg"> Главная</a>
+            <a href="#" class="SuperButton nav-link active">Главная</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link"><img src="../data/images/Category.svg" alt="Logo" width="20"
-                                                          height="20" fill="white" xmlns="http://www.w3.org/2000/svg">
-                Категории</a>
+            <a href="#" class="SuperButton nav-link">Категории</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link"><img src="../data/images/calendar3.svg" alt="Logo" width="20"
-                                                          height="20" fill="white" xmlns="http://www.w3.org/2000/svg">
-                Заказы</a>
+            <a href="#" class="SuperButton nav-link">Заказы</a>
         </li>
         <li class="nav-item">
-            <a href="#" class="SuperButton nav-link"><img src="../data/images/person-circle.svg" alt="Logo" width="20"
-                                                          height="20" fill="white" xmlns="http://www.w3.org/2000/svg">
-                Контакты</a>
+            <a href="#" class="SuperButton nav-link">Контакты</a>
         </li>
     </ul>
     <div class="profile-section mt-auto">
