--- a/html/contacts.html
+++ b/html/contacts.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://sky.pro/wiki/favicon.ico" type="image/x-icon" sizes="48x48">
     <title>Интернет-магазин | Контакты</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../data/style.css" rel="stylesheet" type="text/css">
